# SysNav

./: .gitignore  .gitmodules  LICENSE  README.md  requirement.txt  set_yolo_e.py  set_yolo_world.py  system_bagfile_with_exploration_planner.sh  system_real_robot_with_exploration_planner_4090.sh  system_real_robot_with_exploration_planner_g1.sh  system_real_robot_with_exploration_planner_go2.sh  system_simulation_with_exploration_planner.sh
base_station/: base_station.sh
src/base_autonomy/local_planner/: CMakeLists.txt  package.xml
src/base_autonomy/local_planner/config/: omniDir.yaml  standard.yaml
src/base_autonomy/local_planner/launch/: local_planner.launch  local_planner.launch.py
src/base_autonomy/local_planner/src/: localPlanner.cpp  pathFollower.cpp
src/base_autonomy/terrain_analysis/launch/: terrain_analysis.launch
src/base_autonomy/terrain_analysis/src/: terrainAnalysis.cpp
src/base_autonomy/vehicle_simulator/launch/: system_bagfile.launch  system_bagfile_with_exploration_planner.launch  system_bagfile_with_route_planner.launch  system_real_robot.launch  system_real_robot_with_exploration_planner.launch  system_real_robot_with_exploration_planner_4090.launch  system_real_robot_with_exploration_planner_go2.launch  system_real_robot_with_route_planner.launch  system_simulation.launch  system_simulation_with_exploration_planner.launch  system_simulation_with_route_planner.launch
src/base_autonomy/vehicle_simulator/rviz/: vehicle_simulator.rviz
src/base_autonomy/vehicle_simulator/src/: vehicleSimulator.cpp
src/base_autonomy/waypoint_example/launch/: waypoint_example.launch
src/exploration_planner/tare_planner/: CMakeLists.txt  package.xml
src/exploration_planner/tare_planner/config/: indoor.yaml  matterport_bagfile.yaml  matterport_real.yaml  matterport_sim.yaml  tunnel.yaml
src/exploration_planner/tare_planner/data/: boundary.ply  boundary_sim.ply  boundary_sim_office2.ply
src/exploration_planner/tare_planner/include/exploration_path/: exploration_path.h
src/exploration_planner/tare_planner/include/grid/: grid.h
src/exploration_planner/tare_planner/include/grid_world/: grid_world.h
src/exploration_planner/tare_planner/include/local_coverage_planner/: local_coverage_planner.h
src/exploration_planner/tare_planner/include/planning_env/: planning_env.h
src/exploration_planner/tare_planner/include/representation/: representation.h
src/exploration_planner/tare_planner/include/rolling_occupancy_grid/: rolling_occupancy_grid.h
src/exploration_planner/tare_planner/include/room_segmentation/: room_segmentation_node.h
src/exploration_planner/tare_planner/include/sensor_coverage_planner/: sensor_coverage_planner_ground.h
src/exploration_planner/tare_planner/include/utils/: misc_utils.h
src/exploration_planner/tare_planner/include/viewpoint/: viewpoint.h
src/exploration_planner/tare_planner/include/viewpoint_manager/: viewpoint_manager.h
src/exploration_planner/tare_planner/launch/: explore.launch  explore_tunnel.launch  explore_world.launch  explore_world_sim.launch  room_segmentation.launch
src/exploration_planner/tare_planner/msg/: DetectionResult.msg  NavigationQuery.msg  ObjectNode.msg  ObjectNodeList.msg  ObjectType.msg  RoomEarlyStop1.msg  RoomNode.msg  RoomNodeList.msg  RoomType.msg  TargetObject.msg  TargetObjectInstruction.msg  TargetObjectWithSpatial.msg  ViewpointRep.msg  VlmAnswer.msg
src/exploration_planner/tare_planner/rviz/: tare_planner_ground.rviz
src/exploration_planner/tare_planner/src/grid_world/: grid_world.cpp
src/exploration_planner/tare_planner/src/local_coverage_planner/: local_coverage_planner.cpp
src/exploration_planner/tare_planner/src/planning_env/: planning_env.cpp
src/exploration_planner/tare_planner/src/representation/: representation.cpp
src/exploration_planner/tare_planner/src/rolling_occupancy_grid/: rolling_occupancy_grid.cpp
src/exploration_planner/tare_planner/src/room_segmentation/: room_segmentation.cpp
src/exploration_planner/tare_planner/src/sensor_coverage_planner/: sensor_coverage_planner_ground.cpp
src/exploration_planner/tare_planner/src/utils/: misc_utils.cpp
src/exploration_planner/tare_planner/src/viewpoint/: viewpoint.cpp
src/exploration_planner/tare_planner/src/viewpoint_manager/: viewpoint_manager.cpp
src/route_planner/far_planner/config/: indoor.yaml
src/route_planner/far_planner/src/: dynamic_graph.cpp
src/semantic_mapping/: package.xml  setup.cfg  setup.py
src/semantic_mapping/config/: mapping_mecanum_bagfile.yaml  mapping_mecanum_real.yaml  mapping_mecanum_sim.yaml
src/semantic_mapping/launch/: detection_node.launch  semantic_mapping_bagfile.launch  semantic_mapping_real.launch  semantic_mapping_sim.launch
src/semantic_mapping/semantic_mapping/: cloud_image_fusion.py  detection_node.py  semantic_map_new.py  semantic_mapping_node.py  setup.cfg  single_object_new.py  utils.py  visualizer.py
src/semantic_mapping/semantic_mapping/config/: botsort.yaml  objects.yaml
src/semantic_mapping/semantic_mapping/tools/: ros2_bag_utils.py
src/slam/arise_slam_mid360/: package.xml
src/slam/arise_slam_mid360/config/: livox_mid360.yaml  (+2 more)
src/slam/arise_slam_mid360_msgs/: package.xml
src/unitree_webrtc_ros/: README.md  package.xml  setup.cfg  setup.py
src/unitree_webrtc_ros/config/: unitree_params.yaml
src/unitree_webrtc_ros/launch/: unitree_control.launch.py
src/unitree_webrtc_ros/scripts/: unitree_control
src/unitree_webrtc_ros/unitree_webrtc_ros/: unitree_control.py
src/utilities/receive_theta/: readme.txt
src/utilities/serial/: CMakeLists.txt  package.xml
src/utilities/teleop_joy_controller/: CMakeLists.txt  package.xml
src/utilities/teleop_joy_controller/launch/: teleop_joy_controller.launch
src/utilities/teleop_joy_controller/src/: teleopJoyController.cpp
src/vlm_node/: package.xml  setup.cfg  setup.py
src/vlm_node/config/: vlm_config.yaml
src/vlm_node/launch/: keyboard_input.launch  vlm_node.launch  vlm_node_sim.launch
src/vlm_node/vlm_node/: constants.py  keyboard_input.py  utils.py  vlm_reasoning_node.py
(+17 files in other folders)
