<package format="3">
  <name>tare_planner</name>
  <version>0.0.1</version>
  <description>TARE Exploration Planner for Ground Vehicles</description>
  <maintainer email="ccao1@andrew.cmu.edu">Chao Cao</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>vlm</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>backward_ros</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export> 
</package>
