[metadata]
name = semantic_mapping
version = 0.1.0
author = Guofei Chen
author_email = guofei@cmu.edu
description = A short description of my package
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/gfchen01/semantic_mapping_with_360_camera_and_3d_lidar
# Classifiers (optional, but recommended)
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    # requests>=2.25.0
    # numpy>=1.22
include_package_data = True